===============================================================
*** You must run 'make predist' in the pio subdirectory before committing. ***

Tag name: pio1_6_8
Originator(s): Jim
Date: April 23, 2013
One-line Summary: minor fix in box_rearrange.F90 for mpi-serial
	
M                 pio/box_rearrange.F90.in
M                 pio/box_rearrange.F90

===============================================================
*** You must run 'make predist' in the pio subdirectory before committing. ***

Tag name: pio1_6_7
Originator(s): Jim
Date: April 22, 2013
One-line Summary: bug fixes in async interface, mpi-serial interface

List all subroutines eliminated:

List all subroutines added and what they do:
	readded file dtypes.h which is generated but timestamps were causing issues

List all existing files that have been modified, and describe the changes:
M                 pio/pio_msg_callbacks.F90
M                 pio/piolib_mod.F90
M                 pio/Makefile
M                 pio/pio_msg_mod.F90
A                  pio/dtypes.h
M                 pio/nf_mod.F90
M                 pio/piodarray.F90.in
M                 pio/piodarray.F90
M                 pio/iompi_mod.F90.in
M                 pio/iompi_mod.F90
M                 pio/box_rearrange.F90.in
M                 pio/box_rearrange.F90
M                 pio/pionfput_mod.F90.in
M                 pio/pionfput_mod.F90



	
List all component tags that were used to create pio tag:

Describe the changes for each component above that was changed relative
to the previous ccsm tag in this sequence (this includes description
of new functionality and how user can use it):

Bugs fixed:

Describe any changes made to scripts/build system:

Describe any substantial timing or memory changes:

Code reviewed by: Jim 

Summary of pre-tag testing: cesm prealpha testing
	

  Regression tests:
test complete on yellowstone 103 tests PASS, 0 tests FAIL
test complete on yellowstone_gnu 80 tests PASS, 0 tests FAIL