@@ -198,10 +198,10 @@ subroutine box_rearrange_comp2io_{TYPE} (IOsystem, ioDesc, s1, src, niodof, &
                      'box_rearrange_comp2io: i=', i, &
                      'dest_ioproc(i)=', ioproc )
 
-      if ( ioindex<0 .or. ioindex>=ndof ) &
-        call piodie( __PIO_FILE__,__LINE__, &
-                     'box_rearrange_comp2io: i=', i, &
-                     'dest_ioindex(i) out of range=', int(ioindex))
+!      if ( ioindex<0 .or. ioindex>=ndof ) &
+!        call piodie( __PIO_FILE__,__LINE__, &
+!                     'box_rearrange_comp2io: i=', i, &
+!                     'dest_ioindex(i) out of range=', int(ioindex))
 
       dest(ioindex+1) = src(i)      ! ioindex is 0-based
 
