@@ -110,7 +110,9 @@ contains
 !! Ported from CAM: P. Worley, May 2009
 !< 
 !-----------------------------------------------------------------------
-
+#ifdef TIMING
+  use perf_mod, only : t_startf, t_stopf   ! _EXTERNAL
+#endif
 !-----------------------------------------------------------------------
    implicit none
 !---------------------------Input arguments--------------------------
